--- a/Random Unitary Test.ipynb
+++ b/Random Unitary Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 86,
    "id": "bed53d4a-63ba-48ba-af32-fcac9273d4ec",
    "metadata": {
     "tags": []
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 87,
    "id": "da7d8289",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 88,
    "id": "0399c70c",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 89,
    "id": "242c7a9d",
    "metadata": {},
    "outputs": [
@@ -64,8 +64,8 @@
       "            dims=(2,))\n",
       "psi_2=Statevector([1.+0.j, 0.+0.j],\n",
       "            dims=(2,))\n",
-      "T=Operator([[ 0.00230229-0.85093649j,  0.48398855+0.20410015j],\n",
-      "          [-0.51306112+0.11256141j, -0.15267847+0.83713051j]],\n",
+      "T=Operator([[0.+0.j, 0.-1.j],\n",
+      "          [0.+1.j, 0.+0.j]],\n",
       "         input_dims=(2,), output_dims=(2,))\n"
      ]
     }
@@ -74,7 +74,8 @@
     "psi_in = random_statevector(2, seed=7)\n",
     "psi_1 = Statevector.from_label(\"+\")\n",
     "psi_2 = Statevector.from_label(\"0\")\n",
-    "T = random_unitary(2, seed=7)\n",
+    "# T = random_unitary(2, seed=10)\n",
+    "T = Operator.from_label(\"Y\")\n",
     "\n",
     "print(f\"{psi_in=}\")\n",
     "print(f\"{psi_1=}\")\n",
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 90,
    "id": "db91cbdd",
    "metadata": {},
    "outputs": [
@@ -92,20 +93,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "phi=1.3938608268467634\n"
+      "psi_a=Statevector([0.-0.70710678j, 0.+0.70710678j],\n",
+      "            dims=(2,))\n",
+      "p_plus=0.0\n",
+      "phi=1.5707963267948966\n"
      ]
     }
    ],
    "source": [
-    "# phi = np.arccos(sqrt(psi_1.evolve(T).expectation_value(psi_1).real))\n",
-    "phi = np.arccos(2 * psi_1.evolve(T).expectation_value(psi_1).real - 1) / 2\n",
+    "psi_a = psi_1.evolve(T)\n",
+    "p_plus = psi_a.expectation_value(psi_1).real\n",
+    "phi = np.arccos(sqrt(p_plus))\n",
     "\n",
+    "print(f\"{psi_a=}\")\n",
+    "print(f\"{p_plus=}\")\n",
     "print(f\"{phi=}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 91,
    "id": "f2ccba8c",
    "metadata": {},
    "outputs": [
@@ -113,27 +120,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "theta=nan\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-58-4d3d77caa28b>:1: RuntimeWarning: invalid value encountered in arccos\n",
-      "  theta = np.arccos(sqrt(2 * psi_2.evolve(T).expectation_value(psi_2).real))\n"
+      "psi_b=Statevector([0.+0.j, 0.+1.j],\n",
+      "            dims=(2,))\n",
+      "p_0=0.0\n",
+      "theta=1.5707963267948966\n"
      ]
     }
    ],
    "source": [
-    "theta = np.arccos(sqrt(2 * psi_2.evolve(T).expectation_value(psi_2).real))\n",
+    "psi_b = psi_2.evolve(T)\n",
+    "p_0 = psi_b.expectation_value(psi_2).real\n",
+    "theta = np.arccos(sqrt(2 * p_0))\n",
     "\n",
+    "print(f\"{psi_b=}\")\n",
+    "print(f\"{p_0=}\")\n",
     "print(f\"{theta=}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 92,
    "id": "ccf9cdd6",
    "metadata": {},
    "outputs": [
@@ -141,20 +147,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T_guess=array([[nan+nanj, nan+nanj],\n",
-      "       [nan+nanj, nan+nanj]])\n"
+      "T_guess=array([[ 3.74939946e-33-6.123234e-17j, -1.00000000e+00-6.123234e-17j],\n",
+      "       [ 1.00000000e+00-6.123234e-17j,  3.74939946e-33+6.123234e-17j]])\n"
      ]
     }
    ],
    "source": [
-    "T_guess = RZGate(phi).to_matrix() @ RXGate(theta).to_matrix()\n",
+    "T_guess = RZGate(2 * phi).to_matrix() @ RXGate(2 * theta).to_matrix() #Why 2 * angle??\n",
     "\n",
     "print(f\"{T_guess=}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 93,
    "id": "82bef0f7",
    "metadata": {},
    "outputs": [
@@ -162,38 +168,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T_inverse=array([[nan+nanj, nan+nanj],\n",
-      "       [nan+nanj, nan+nanj]])\n"
+      "T_inverse=array([[ 3.74939946e-33+6.123234e-17j,  1.00000000e+00+6.123234e-17j],\n",
+      "       [-1.00000000e+00+6.123234e-17j,  3.74939946e-33-6.123234e-17j]])\n"
      ]
     }
    ],
    "source": [
-    "T_inverse = RXGate(-theta).to_matrix() @ RZGate(-phi).to_matrix()\n",
+    "T_inverse = RXGate(-2 * theta).to_matrix() @ RZGate(-2 * phi).to_matrix()\n",
     "\n",
     "print(f\"{T_inverse=}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 97,
    "id": "a84a072f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Operator([[nan+nanj, nan+nanj],\n",
-       "          [nan+nanj, nan+nanj]],\n",
+       "Operator([[ 6.123234e-17+1.00000000e+00j, -6.123234e-17-3.74939946e-33j],\n",
+       "          [-6.123234e-17+3.74939946e-33j, -6.123234e-17+1.00000000e+00j]],\n",
        "         input_dims=(2,), output_dims=(2,))"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "T @ T_inverse"
+    "T @ T_inverse  #Why no identity??"
    ]
   }
  ],
