verify inverse and adjoint

--- a/Random Unitary Test.ipynb
+++ b/Random Unitary Test.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 105,
    "id": "82bef0f7",
    "metadata": {},
    "outputs": [
@@ -169,37 +169,39 @@
      "output_type": "stream",
      "text": [
       "T_inverse=array([[ 3.74939946e-33+6.123234e-17j,  1.00000000e+00+6.123234e-17j],\n",
+      "       [-1.00000000e+00+6.123234e-17j,  3.74939946e-33-6.123234e-17j]])\n",
+      "T_adjoint=array([[ 3.74939946e-33+6.123234e-17j,  1.00000000e+00+6.123234e-17j],\n",
       "       [-1.00000000e+00+6.123234e-17j,  3.74939946e-33-6.123234e-17j]])\n"
      ]
     }
    ],
    "source": [
     "T_inverse = RXGate(-2 * theta).to_matrix() @ RZGate(-2 * phi).to_matrix()\n",
+    "T_adjoint = T_guess.conj().T #Verify this is actually the inverse\n",
     "\n",
-    "print(f\"{T_inverse=}\")"
+    "print(f\"{T_inverse=}\")\n",
+    "print(f\"{T_adjoint=}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 107,
    "id": "a84a072f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Operator([[ 6.123234e-17+1.00000000e+00j, -6.123234e-17-3.74939946e-33j],\n",
-       "          [-6.123234e-17+3.74939946e-33j, -6.123234e-17+1.00000000e+00j]],\n",
-       "         input_dims=(2,), output_dims=(2,))"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "identity_guess=array([[ 6.123234e-17+1.00000000e+00j, -6.123234e-17-3.74939946e-33j],\n",
+      "       [-6.123234e-17+3.74939946e-33j, -6.123234e-17+1.00000000e+00j]])\n"
+     ]
     }
    ],
    "source": [
-    "T @ T_inverse  #Why no identity??"
+    "identity_guess = T.data @ T_inverse.data  #Why no identity??\n",
+    "\n",
+    "print(f\"{identity_guess=}\")"
    ]
   }
  ],
