--- a/Random Unitary Test.ipynb
+++ b/Random Unitary Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "id": "bed53d4a-63ba-48ba-af32-fcac9273d4ec",
    "metadata": {
     "tags": []
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "id": "da7d8289",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "id": "0399c70c",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "id": "242c7a9d",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "id": "db91cbdd",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 16,
    "id": "f2ccba8c",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "id": "ccf9cdd6",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 18,
    "id": "82bef0f7",
    "metadata": {},
    "outputs": [
@@ -168,24 +168,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T_inverse=array([[ 3.74939946e-33+6.123234e-17j,  1.00000000e+00+6.123234e-17j],\n",
-      "       [-1.00000000e+00+6.123234e-17j,  3.74939946e-33-6.123234e-17j]])\n",
-      "T_adjoint=array([[ 3.74939946e-33+6.123234e-17j,  1.00000000e+00+6.123234e-17j],\n",
+      "T_guess_inverse=array([[ 3.74939946e-33+6.123234e-17j,  1.00000000e+00+6.123234e-17j],\n",
       "       [-1.00000000e+00+6.123234e-17j,  3.74939946e-33-6.123234e-17j]])\n"
      ]
     }
    ],
    "source": [
-    "T_inverse = RXGate(-2 * theta).to_matrix() @ RZGate(-2 * phi).to_matrix()\n",
-    "T_adjoint = T_guess.conj().T #Verify this is actually the inverse\n",
+    "T_guess_inverse = RXGate(-2 * theta).to_matrix() @ RZGate(-2 * phi).to_matrix()\n",
     "\n",
-    "print(f\"{T_inverse=}\")\n",
-    "print(f\"{T_adjoint=}\")"
+    "print(f\"{T_guess_inverse=}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 19,
    "id": "a84a072f",
    "metadata": {},
    "outputs": [
@@ -193,13 +189,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "identity_guess=array([[ 6.123234e-17+1.00000000e+00j, -6.123234e-17-3.74939946e-33j],\n",
-      "       [-6.123234e-17+3.74939946e-33j, -6.123234e-17+1.00000000e+00j]])\n"
+      "identity_guess=Operator([[ 6.123234e-17+1.00000000e+00j, -6.123234e-17-3.74939946e-33j],\n",
+      "          [-6.123234e-17+3.74939946e-33j, -6.123234e-17+1.00000000e+00j]],\n",
+      "         input_dims=(2,), output_dims=(2,))\n"
      ]
     }
    ],
    "source": [
-    "identity_guess = T.data @ T_inverse.data  #Why no identity??\n",
+    "identity_guess = T @ T_guess_inverse #Why no identity??\n",
     "\n",
     "print(f\"{identity_guess=}\")"
    ]
