guessed angles are correct, but construction of T is incorrect?

--- a/Random Unitary Test.ipynb
+++ b/Random Unitary Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "bed53d4a-63ba-48ba-af32-fcac9273d4ec",
    "metadata": {
     "tags": []
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "da7d8289",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "0399c70c",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "242c7a9d",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "db91cbdd",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "f2ccba8c",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "ccf9cdd6",
    "metadata": {},
    "outputs": [
@@ -147,20 +147,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T_guess=array([[ 3.74939946e-33-6.123234e-17j, -1.00000000e+00-6.123234e-17j],\n",
-      "       [ 1.00000000e+00-6.123234e-17j,  3.74939946e-33+6.123234e-17j]])\n"
+      "T_guess=array([[ 0.5-0.5j, -0.5-0.5j],\n",
+      "       [ 0.5-0.5j,  0.5+0.5j]])\n"
      ]
     }
    ],
    "source": [
-    "T_guess = RZGate(2 * phi).to_matrix() @ RXGate(2 * theta).to_matrix() #Why 2 * angle??\n",
+    "T_guess = RZGate(phi).to_matrix() @ RXGate(theta).to_matrix()\n",
     "\n",
     "print(f\"{T_guess=}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "82bef0f7",
    "metadata": {},
    "outputs": [
@@ -168,20 +168,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T_guess_inverse=array([[ 3.74939946e-33+6.123234e-17j,  1.00000000e+00+6.123234e-17j],\n",
-      "       [-1.00000000e+00+6.123234e-17j,  3.74939946e-33-6.123234e-17j]])\n"
+      "T_guess_inverse=array([[ 0.5-0.5j,  0.5-0.5j],\n",
+      "       [-0.5-0.5j,  0.5+0.5j]])\n",
+      "T_true_inverse=Operator([[0.-0.j, 0.-1.j],\n",
+      "          [0.+1.j, 0.-0.j]],\n",
+      "         input_dims=(2,), output_dims=(2,))\n"
      ]
     }
    ],
    "source": [
-    "T_guess_inverse = RXGate(-2 * theta).to_matrix() @ RZGate(-2 * phi).to_matrix()\n",
+    "T_guess_inverse = RXGate(theta).to_matrix() @ RZGate(phi).to_matrix()\n",
+    "T_true_inverse = T.adjoint()\n",
     "\n",
-    "print(f\"{T_guess_inverse=}\")"
+    "print(f\"{T_guess_inverse=}\")\n",
+    "print(f\"{T_true_inverse=}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "a84a072f",
    "metadata": {},
    "outputs": [
@@ -189,8 +194,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "identity_guess=Operator([[ 6.123234e-17+1.00000000e+00j, -6.123234e-17-3.74939946e-33j],\n",
-      "          [-6.123234e-17+3.74939946e-33j, -6.123234e-17+1.00000000e+00j]],\n",
+      "identity_guess=Operator([[-0.5+0.5j,  0.5-0.5j],\n",
+      "          [ 0.5+0.5j,  0.5+0.5j]],\n",
       "         input_dims=(2,), output_dims=(2,))\n"
      ]
     }
